--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           pkg-manager: pip
       - run:                    
           command: |
-            behave features/business.feature
+            behave --no-sandbox --headless features/business.feature
 
 workflows:
   main:
