--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run:
           name: Run Behave tests
           command: |
-            behave features/business.feature
+            behave features/login.feature
 
 workflows:
   version: 2
