--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,8 @@
 version: 2.1
-
 jobs:
   build:
-    docker:
-      - image: cimg/python:3.8
-    resource_class: my_pc/self
+    machine:
+      image: self/self
     steps:
       - checkout
       - run:
@@ -19,17 +17,12 @@ jobs:
             sudo dpkg -i google-chrome-stable_current_amd64.deb
             sudo apt-get -f install
       - run:
-          name: Set up Python Virtual Environment
+          name: Set the Python Virtual Environment
           command: |
             python -m venv venv
             source venv/bin/activate
             pip install --upgrade pip
-      - run:
-          name: Install Python Dependencies
-          command: |
-            pip install -r requirements.txt
-      - run:
-          name: Run Behave tests
+      - run:                    
           command: |
             behave features/login.feature
 
